testing fixed property on mobile

--- a/stylesheets/menu.css
+++ b/stylesheets/menu.css
@@ -19,7 +19,8 @@
 	/*top: 0px;*/
 
 	/*BAD*/
-	bottom: 0px;
+	/*bottom: 0px;*/
+	top: 0px;
 	position: fixed;
 }
 
